[package]
name = "russ-macro"
version = "0.1.0"
authors = ["Simon Berger <simon@siku2.io>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
proc-macro2 = "1.0"
proc-macro-error = "1.0"
proc-macro-hack = "0.5"
quote = "1.0"
russ-internal-macro = { path = "../russ-internal-macro" }
syn = "1.0"

[dev-dependencies]
russ = { path = "../russ" }
