[package]
name = "russ"
version = "0.1.0"
authors = ["Simon Berger <simon@siku2.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
proc-macro-hack = "0.5"
russ-css = { path = "../russ-css" }
russ-macro = { path = "../russ-macro" }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "HtmlHeadElement",
    "HtmlStyleElement",
    "Window"
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
